# SmartHB

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  PRD.md  README.md  ROADMAP.md  SETUP.sh  docker-compose.prod.yml  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json  settings.local.json
.claude/agents/: deploy-prod.md  hotfix-close.md  phase-planner.md  prd-to-roadmap.md  sprint-close.md  sprint-planner.md  sprint-review.md
.claude/commands/: restart.md  setup-project.md  sprint-dev.md
.claude/hooks/: posttooluse-code-validator.sh  posttooluse-scope-tracker.sh  pretooluse-bash-guard.sh  stop-doc-checker.sh
.claude/memory/: MEMORY.md  README.md  cipher-test-gate-trap.md  data-loss-recovery-method.md  deploy-version-three-files.md  dev-pc-db-is-test-data.md  exam-feature-cancelled.md  keyring-v3-features-trap.md  ntfs-power-loss-pattern.md  sprint-next-session.md  sprint13-pin-optional.md  sqlite-migration-fk-rebuild.md  tauri-window-confirm-blocked.md  workflow-no-pr.md
.claude/rules/: backend.md  frontend.md  harness-engineering.md  notion.md  sprint-workflow.md
.claude/skills/: brainstorming.md  code-review.md  harness-ci-gate.md  karpathy-guidelines.md  loop-detection.md  retrospective.md  simplify.md  systematic-debugging.md  test-checklist.md  writing-plans.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
docker/backend/: Dockerfile.prod.example
docker/frontend/: Dockerfile.prod.example
docker/nginx/: Dockerfile.example
docs/: EXAMPLE-prd.md  ci-policy.md  code-review-checklist.md  data-model.md  dev-process.md  prd-issues.md  prompt-guide.md  setup-guide.md
docs/arch/: adr-001-sqlcipher-integration.md  adr-002-applock-library.md  adr-003-backup-implementation.md  adr-004-keychain-crate.md  adr-005-holiday-api-selection.md  adr-006-calendar-library.md  adr-007-pin-authentication.md  adr-008-optional-pin-gate.md  adr-009-db-folder-change.md  adr-010-bill-deletion-guard.md  adr-011-partial-makeup-schema.md  adr-012-db-live-location.md
docs/code-review/: full-review-2026-06.md
docs/code-reviews/: sprint10.md  sprint11.md  sprint12.md  sprint13.md  sprint14.md  sprint15.md  sprint16.md  sprint17.md  sprint18.md  sprint19.md  sprint20.md  sprint22.md  sprint23.md  sprint8.md  sprint9.md
docs/deploy-history/: 2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-26.md  2026-05-28.md  2026-05-29.md  2026-06-02.md  2026-06-06.md  2026-06-07.md  2026-06-12.md  2026-06-30.md  2026-07-02.md  2026-07-09.md  2026-07-19.md  2026-07-20.md  2026-07-22.md  README.md
docs/harness-engineering/: README.md  continuous-verification.md  deployment-policy.md
docs/incidents/: 2026-07-22-data-loss-rca.md
docs/phase/: phase1.md
docs/risk-register/: 2026-05-18.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-26-sprint10.md  2026-05-26.md  2026-05-28-sprint11.md  2026-05-28.md  2026-05-29-sprint11.md  2026-05-30-sprint12.md  2026-05-30.md  2026-06-02.md  2026-06-07.md  2026-06-08.md  2026-06-12.md  2026-06-30.md  2026-07-01.md  2026-07-07.md  2026-07-08.md  2026-07-19.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  sprint1-risks.md
docs/sprint-retrospectives/: sprint1-retrospective.md  sprint10-retrospective.md  sprint11-post-retro.md  sprint11-post-retro2.md  sprint11-retrospective.md  sprint12-retrospective.md  (+19 more)
scripts/: README.md  fetch-holidays.ts  pre-commit-lint.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001__create_code_tables.sql  008__create_app_settings_and_audit_logs.sql  101__create_students_and_schedules.sql  102__create_study_periods_and_schedule_codes.sql  103__create_schedule_events.sql  104__migrate_standard_fees_to_weekly_hours.sql  105__augment_schools_for_codes.sql  106__create_attendance_tables.sql  107__add_makeup_attendance_fk.sql  108__cleanup_makeup_status_check.sql  109__create_billing_tables.sql  110__cleanup_duplicate_payment_methods.sql  111__remove_billing_close_concept.sql  200__seed_setup_settings.sql  201__update_seed_data.sql  301__fix_schedule_codes_seed.sql  302__add_is_seeded_to_schedule_events.sql  303__create_diagnosis_history.sql  304__expire_withdrawn_pending_makeup.sql  305__add_birth_date_to_students.sql  306__add_note_to_regular_attendances.sql  307__add_start_time_to_regular_attendances.sql  308__allow_duplicate_supplement_day.sql  309__allow_duplicate_holiday.sql  310__auto_correct_school_type.sql  311__create_makeup_allocations.sql  312__backfill_partial_makeup.sql
src-tauri/resources/manual/: index.html
src-tauri/src/: error.rs  lib.rs  main.rs  startup.rs
src-tauri/src/commands/: academic.rs  attendance.rs  audit.rs  auth.rs  backup.rs  billing.rs  calendar.rs  codes.rs  dashboard.rs  db.rs  diagnosis.rs  expiration.rs  export.rs  fees.rs  import.rs  integrity.rs  lock.rs  makeup.rs  mod.rs  notice.rs  pagination.rs  paths.rs  recovery.rs  runtime.rs  schedules.rs  settings.rs  setup.rs  students.rs  sync.rs
strategy/: branch-strategy.md  code-review.md  deployment.md  documentation.md  planning.md  retrospectives.md  risk-management.md  testing.md
(+219 files in other folders)
