[package]
name = "smarthb"
version = "0.1.0"
description = "정쌤의 스마트해법수학"
authors = []
edition = "2021"

[lib]
name = "smarthb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "smarthb"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
